k8s/overlays/dev/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: paismart-dev
  labels:
    app.kubernetes.io/part-of: paismart
    env: dev
